objects/ahaapp__AhaIdeaLink__c.object
<CustomObject>
    <fields>
        <fullName>ahaapp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aha Idea Links</relationshipLabel>
        <relationshipName>AhaIdeaLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ahaapp__AhaIdea__c</fullName>
        <label>Aha! Idea</label>
        <referenceTo>ahaapp__AhaIdea__c</referenceTo>
        <relationshipLabel>Aha Idea Links</relationshipLabel>
        <relationshipName>AhaIdeas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ahaapp__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Aha Idea Links</relationshipLabel>
        <relationshipName>AhaIdeaLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ahaapp__LinkedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LinkedByUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ahaapp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Aha Idea Links</relationshipLabel>
        <relationshipName>AhaIdeaLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Aha! Idea Link</label>
    <nameField>
        <label>Link Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aha Idea Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>